fix for Nexus 7 in landscape mode to avoid word wrapping in page names

--- a/extended/widgets/navigation.less
+++ b/extended/widgets/navigation.less
@@ -6,6 +6,7 @@
     .extendednavigation {
         ul {
             li {
+                white-space: nowrap;
                 @media @tablet {
                     border-bottom: 1px solid @color-swatch2;
                 }
